--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,44 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-box {
+  /* border-style: solid;
+  border-radius: 10px;
+  border-width: 1px;
+  border-color: rgb(216, 216, 216); */
+  padding: 20px;
+  margin: auto;
+  width: 40%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+
+@font-face {
+  font-family: 'Alliance Bold';
+  src: local('Alliance-No-1-Bold'), url(./fonts/Alliance-No-1-Bold.woff2) format('woff2'),
+
+}
+@font-face {
+  font-family: 'Alliance Extra Bold';
+  src: local('Alliance-No-1-ExtraBold'), url(./fonts/Alliance-No-1-ExtraBold.woff2) format('woff2');
+
+}
+@font-face {
+  font-family: 'Alliance Regular';
+  src: local('Alliance-No-1-Regular'), url(./fonts/Alliance-No-1-Regular.woff2) format('woff2');
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-title {
+  font-family: 'Alliance Extra Bold';
+  font-size: xxx-large;
+}
+
+.header-subtitle {
+  font-family: 'Alliance Regular';
+  font-size: medium;
+  margin-bottom: 30px;
+  margin-top: -30px;
 }
